[package]
name = "latticearc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Production-ready post-quantum cryptography. Hybrid ML-KEM+X25519 by default, all 4 NIST standards (FIPS 203–206), post-quantum TLS, and FIPS 140-3 backend — one crate, zero unsafe."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
build = "build.rs"

# Inherit all lints from workspace
[lints]
workspace = true

[features]
default = []
# FIPS 140-3 validated backend (requires CMake + Go build tools)
# Without this feature, aws-lc-rs uses its default non-FIPS backend (C compiler only).
fips = ["aws-lc-rs/fips"]
# Power-up KAT self-tests for FIPS-boundary algorithms (ML-KEM, AES-GCM, SHA-2, ML-DSA, SLH-DSA)
fips-self-test = []
# ZKP serialization support (enables serde_with for ZKP types)
zkp-serde = ["dep:serde_with"]
# TLS formal verification features
formal-verification = []
kani = []
saw = []
# OS-level memory locking for `SecretVec` (Secret Type Invariant I-10):
# prevents heap-backed secret buffers from being swapped to disk or appearing
# in core dumps. Uses `mlock(2)` on Linux/macOS and `VirtualLock` on Windows
# via the `region` crate. Default-off because `RLIMIT_MEMLOCK` can cause
# constructor-time lock failures on some deployments; when the feature is
# enabled and locking fails, `SecretVec` falls back to an unlocked buffer (the
# bytes are still zeroized on drop). `SecretBytes<N>` is always stack-allocated
# and is deliberately NOT covered by this feature — see the `SecretBytes` doc.
secret-mlock = ["dep:region"]

# Exposes `AeadCipher::new_allow_weak_key` (and the equivalent inherent
# constructor on `XChaCha20Poly1305Cipher`) — a constructor that bypasses the
# `AeadError::WeakKey` check fired by `AeadCipher::new` on the all-zero key
# pattern. NIST AES-GCM Test Cases 1 and 2 (McGrew & Viega, 2004) and other
# canonical KAT vectors use the all-zero key, so reproducing them requires this
# escape hatch. Default-off so production builds cannot accidentally construct
# a weak-key cipher; KAT-running test suites must opt in explicitly.
kat-test-vectors = []

[dependencies]
# =============================================================================
# Core utilities
# =============================================================================
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# =============================================================================
# Cryptography - FIPS 140-3 validated
# =============================================================================
# ML-KEM (FIPS 203) with FIPS certification (Certificate #4631, #4759, #4816)
aws-lc-rs = { workspace = true }
# ML-DSA (FIPS 204) - keep until aws-lc-rs FIPS branch includes ML-DSA
fips204 = { workspace = true }
# SLH-DSA (FIPS 205) - not yet in aws-lc-rs
fips205 = { workspace = true }
# FN-DSA (FIPS 206) - unique implementation
fn-dsa = { workspace = true }

# =============================================================================
# Classical cryptography
# =============================================================================
aes = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hmac = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
k256 = { workspace = true, features = ["sha256"] }
ecdsa = { workspace = true }
blake2 = { workspace = true }
ciborium = { workspace = true }

# =============================================================================
# Random number generation
# =============================================================================
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
getrandom = { workspace = true }

# =============================================================================
# Tracing and observability
# =============================================================================
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

# =============================================================================
# Concurrency and utilities
# =============================================================================
parking_lot = { workspace = true }

# =============================================================================
# ZKP
# =============================================================================
elliptic-curve = { version = "0.13", features = ["sec1"] }
# Optional: ZKP serialization
serde_with = { version = "3.17", optional = true }

# Optional: OS-level memory locking (mlock / VirtualLock) for `SecretVec`.
# Enabled only when the `secret-mlock` feature is selected. See the feature
# flag comment in the `[features]` section for rationale.
region = { version = "3.0", optional = true }


[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
hex-literal = { workspace = true }
tempfile = { workspace = true }
hkdf = "0.12.4"
# Compile-time assertions — enforce that secret-holding types do not gain
# `PartialEq` or similar derives that would defeat our CT-comparison discipline.
static_assertions = "1.1"

[lib]
path = "src/lib.rs"

# =============================================================================
# Examples
# =============================================================================

[[example]]
name = "basic_encryption"

[[example]]
name = "digital_signatures"

[[example]]
name = "hybrid_encryption"

[[example]]
name = "post_quantum_signatures"

[[example]]
name = "complete_secure_workflow"

[[example]]
name = "zero_knowledge_proofs"

[[example]]
name = "unified_api"

[[example]]
name = "true_hybrid_encryption"

[[example]]
name = "crypto_timing"

[[example]]
name = "comprehensive_benchmark"

[[example]]
name = "test_ml_kem"

# =============================================================================
# Benchmarks
# =============================================================================

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "constant_time"
harness = false
