[package]
name = "latticearc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Production-ready post-quantum cryptography. Hybrid ML-KEM+X25519 by default, all 4 NIST standards (FIPS 203–206), and FIPS 140-3 backend — one crate, zero unsafe."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
build = "build.rs"

# Inherit all lints from workspace
[lints]
workspace = true

[features]
default = []
# FIPS 140-3 validated backend (requires CMake + Go build tools).
# Without this feature, aws-lc-rs uses its default non-FIPS backend (C compiler only).
#
# Note: this feature TRANSITIVELY enables `fips-self-test`. FIPS 140-3
# §10.3.1 requires power-on self-tests for an approved cryptographic
# module, so a `--features fips` build that didn't run self-tests would
# be a false compliance claim. If you specifically want the validated
# backend without the self-test wiring (e.g., third-party module that
# runs its own POST), set `default-features = false` and enable
# `aws-lc-rs/fips` directly.
fips = ["aws-lc-rs/fips", "fips-self-test"]
# Power-up KAT self-tests for FIPS-boundary algorithms (ML-KEM, AES-GCM, SHA-2, ML-DSA, SLH-DSA).
# Pulled in transitively by `fips`; can be enabled standalone for non-FIPS
# builds that still want the self-test KAT coverage.
fips-self-test = []
# Subscriber/init helpers for the `tracing` facade. Library code only
# emits `tracing::{trace,debug,info,warn,error}!` events through the
# `tracing` facade, which is always available; this feature gates the
# CONSUMER side (`init_tracing` / `init_tracing_with_file` and the
# `tracing-subscriber` + `tracing-appender` crates that back them).
# Off by default so downstream binaries that wire their own subscriber
# (the standard library convention) don't fight ours for the global
# default. The `latticearc-cli` binary enables this feature.
tracing-init = ["dep:tracing-subscriber", "dep:tracing-appender"]
# ZKP serialization support (enables serde_with for ZKP types)
zkp-serde = ["dep:serde_with"]
# TLS formal verification features
formal-verification = []
kani = []
saw = []
# OS-level memory locking for `SecretVec` (Secret Type Invariant I-10):
# prevents heap-backed secret buffers from being swapped to disk or appearing
# in core dumps. Uses `mlock(2)` on Linux and macOS via the `region` crate.
#
# Windows: this feature compiles as a no-op. `VirtualLock` is documented as
# best-effort (the working set may be trimmed under memory pressure, after
# which `VirtualUnlock` raises `ERROR_NOT_LOCKED`). `region` panics on that
# error; under the workspace's `panic = "abort"` release profile,
# `catch_unwind` does not intercept the panic, so a working-set trim would
# abort the process. Operators who need swap protection on Windows should
# rely on full-disk encryption + paging-file encryption + service-account
# isolation; routing through `VirtualLock` cannot meaningfully improve on
# that under our release profile.
#
# Default-off because `RLIMIT_MEMLOCK` can cause constructor-time lock
# failures on some Linux/macOS deployments; when the feature is enabled and
# locking fails, `SecretVec` falls back to an unlocked buffer (the bytes
# are still zeroized on drop). `SecretBytes<N>` is always stack-allocated
# and is deliberately NOT covered by this feature — see the `SecretBytes`
# doc.
secret-mlock = ["dep:region"]

# Exposes `AeadCipher::new_allow_weak_key` (and the equivalent inherent
# constructor on `XChaCha20Poly1305Cipher`) — a constructor that bypasses the
# `AeadError::WeakKey` check fired by `AeadCipher::new` on the all-zero key
# pattern. NIST AES-GCM Test Cases 1 and 2 (McGrew & Viega, 2004) and other
# canonical KAT vectors use the all-zero key, so reproducing them requires this
# escape hatch. Default-off so production builds cannot accidentally construct
# a weak-key cipher; KAT-running test suites must opt in explicitly.
kat-test-vectors = []

# Exposes adversarial-test mutators on otherwise-immutable proof types
# (e.g. `SigmaProof::challenge_mut`) and FIPS module-error-state recovery
# helpers (`clear_error_state`, `restore_operational_state`). These items
# bypass soundness or FIPS 140-3 §9.6 state-machine invariants, so they
# MUST NOT be reachable from production builds —
# and C1. Test crates that need to mount tamper-
# detection assertions enable this feature explicitly. Distinct from
# `kat-replay` below, which is for legitimate KAT-replay entry points and
# does NOT bypass any soundness check.
test-utils = []

# Exposes legitimate KAT-replay entry points that bypass operator
# parameter floors but NOT cryptographic soundness checks. Specifically:
# `pbkdf2_kat`, which lets RFC 6070 / NIST CAVP fixtures with iteration
# counts below the OWASP per-PRF floor be replayed for validation. The
# DoS cap, key-length checks, and PRF correctness remain enforced — only
# the operator floor is replaced with an absolute minimum of 1. The CLI
# enables this feature so `latticearc kdf --allow-weak-iterations` can
# reproduce published vectors without inheriting the soundness-bypassing
# surface of `test-utils`.
kat-replay = []

[dependencies]
# =============================================================================
# Core utilities
# =============================================================================
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# =============================================================================
# Cryptography - FIPS 140-3 validated
# =============================================================================
# ML-KEM (FIPS 203) with FIPS certification (Certificate #4631, #4759, #4816)
aws-lc-rs = { workspace = true }
# ML-DSA (FIPS 204) - keep until aws-lc-rs FIPS branch includes ML-DSA
fips204 = { workspace = true }
# SLH-DSA (FIPS 205) - not yet in aws-lc-rs
fips205 = { workspace = true }
# FN-DSA (FIPS 206) - unique implementation
fn-dsa = { workspace = true }

# =============================================================================
# Classical cryptography
# =============================================================================
aes = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hmac = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
k256 = { workspace = true, features = ["sha256"] }
ecdsa = { workspace = true }
blake2 = { workspace = true }
ciborium = { workspace = true }

# =============================================================================
# Random number generation
# =============================================================================
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
# `rand_core 0.6` bridge for `fn-dsa` and `ed25519-dalek 2.x` whose latest
# stable releases pre-date the `rand_core 0.9` API. Aliased so both versions
# coexist in the same module.
rand_core_0_6 = { workspace = true }
getrandom = { workspace = true }

# =============================================================================
# Tracing and observability
# =============================================================================
tracing = { workspace = true }
# Subscriber + appender are CONSUMER-side wiring (binary's responsibility).
# Gated behind the `tracing-init` feature so the library doesn't force a
# subscriber on downstream consumers that have their own. See feature doc.
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
tracing-appender = { workspace = true, optional = true }

# =============================================================================
# Concurrency and utilities
# =============================================================================
parking_lot = { workspace = true }

# =============================================================================
# ZKP
# =============================================================================
elliptic-curve = { workspace = true, features = ["sec1"] }
# Optional: ZKP serialization
serde_with = { version = "3.17", optional = true }

# Backed atomic-write helper (`unified_api::atomic_write::AtomicWrite`).
# Used by `KeyFile::write_to_file_with_overwrite` and the CLI's
# encrypt/decrypt/sign output paths to refuse silent clobber + give
# crash-safe rename semantics. Tempfile's NTFS path also tightens the
# Windows secret-key ACL story.
tempfile = { workspace = true }

# Optional: OS-level memory locking (mlock / VirtualLock) for `SecretVec`.
# Enabled only when the `secret-mlock` feature is selected. See the feature
# flag comment in the `[features]` section for rationale.
region = { version = "3.0", optional = true }

# =============================================================================
# Windows-only dependencies
# =============================================================================
# Safe-Rust wrapper for Windows ACL APIs. Used by
# `unified_api::win_acl::set_owner_only_dacl` to set restrictive DACLs on
# audit log files, secret-key files, and key-output directories — the
# Windows analogue of the `mode(0o600)` / `mode(0o700)` we already apply
# on Unix. The crate's `unsafe` is internal; the workspace
# `unsafe_code = "forbid"` lint covers our own source only, so this dep
# is the canonical way to set DACLs without violating the policy.
[target.'cfg(windows)'.dependencies]
# Exact-pinned to 0.2.4: this is the version we audited (last
# upstream release 2021-06-29). A patch release with a behavioural
# change would silently land via `cargo update` under a loose `"0.2"`
# constraint, which is unacceptable for security-critical Windows
# ACL plumbing. Bump deliberately with a re-audit.
windows-permissions = "=0.2.4"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
hex-literal = { workspace = true }
tempfile = { workspace = true }
hkdf = { workspace = true }
# Compile-time assertions — enforce that secret-holding types do not gain
# `PartialEq` or similar derives that would defeat our CT-comparison discipline.
static_assertions = "1.1"

[lib]
path = "src/lib.rs"

# =============================================================================
# Examples
# =============================================================================

[[example]]
name = "basic_encryption"

[[example]]
name = "digital_signatures"

[[example]]
name = "hybrid_encryption"

[[example]]
name = "post_quantum_signatures"

[[example]]
name = "complete_secure_workflow"

[[example]]
name = "zero_knowledge_proofs"

[[example]]
name = "unified_api"

[[example]]
name = "true_hybrid_encryption"

[[example]]
name = "crypto_timing"

[[example]]
name = "comprehensive_benchmark"

[[example]]
name = "test_ml_kem"

# =============================================================================
# Integration tests
# =============================================================================

# `MlDsaSignature::from_bytes_unchecked` is gated behind
# `test-utils`. The three integration tests below construct
# truncated / zero / ones signatures via that helper to exercise
# verify-side rejection. Mark them as requiring `test-utils` so a
# default `cargo test -p latticearc` skips them rather than failing
# to compile; CI's `--all-features` enables the feature and runs
# them. For local development:
#   cargo test -p latticearc --features test-utils
[[test]]
name = "primitives_ml_dsa"
required-features = ["test-utils"]

[[test]]
name = "primitives_regression"
required-features = ["test-utils"]

[[test]]
name = "primitives_side_channel"
required-features = ["test-utils"]

# file-level `#![cfg(all(feature = "fips-self-test",
# feature = "test-utils"))]` previously made the entire FIPS power-up
# KAT suite invisible to default `cargo test -p latticearc` runs —
# the file compiled to nothing and gave no signal that 13 tests had
# been silently dropped. The `required-features` declaration makes
# cargo skip the test transparently with a visible message instead.
[[test]]
name = "primitives_self_test_conditional_kats"
required-features = ["fips-self-test", "test-utils"]

# =============================================================================
# Benchmarks
# =============================================================================

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "constant_time"
harness = false
