[package]
name = "latticearc-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Comprehensive test suite for LatticeArc - regression, API stability, concurrency, and FIPS validation tests"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
publish = false

# Inherit all lints from workspace
[lints]
workspace = true

[features]
default = []
fips = ["latticearc/fips"]

[dependencies]
# Main crate under test. The `kat-test-vectors` feature enables
# `AeadCipher::new_allow_weak_key`, required for NIST AES-GCM Test Cases 1
# and 2 (McGrew & Viega) which use the all-zero key. Production builds of
# `latticearc` do NOT enable this feature, so they cannot accidentally
# construct a weak-key AEAD cipher.
latticearc = { version = "0.8.1", path = "../latticearc", features = ["kat-test-vectors", "test-utils"] }

# Property-based testing
proptest = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cryptographic dependencies for testing
rand = { workspace = true }
rand_core = { workspace = true }
# Bridge to `fn-dsa 0.3`, `ed25519-dalek 2.x`, `x25519-dalek 2.x`, `k256`,
# etc. — these still expose `rand_core 0.6` traits, so test helpers that
# pass an RNG into them must use the 0.6 OsRng. See workspace Cargo.toml.
rand_core_0_6 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
aws-lc-rs = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Encoding
hex = { workspace = true }
base64 = { workspace = true }

# Time handling
chrono = { workspace = true }
uuid = { workspace = true }

# Concurrency / async
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Validation-specific dependencies.
#
# `aes-gcm` IS used directly by `tests/src/validation/cavp/tests.rs`
# (CAVP vector cross-validation against the bare RustCrypto AES-GCM
# impl). Keeping `aes-gcm 0.10`
# here splits the workspace into two `aes` major versions (0.8 transitively
# from `aes-gcm 0.10`, vs 0.9 used directly by `latticearc`). The split
# is contained — tests don't touch library cipher internals — and
# `aes-gcm 0.11` is not yet on crates.io. Revisit when `aes-gcm` cuts a
# 0.11 release that aligns with `aes 0.9+`. Exact-pin is intentional;
# do not relax to a caret range without re-checking the workspace
# `aes` major-version split.
aes-gcm = "=0.10.3"
hkdf = { workspace = true }
libm = "0.2.8"
fips203 = { version = "=0.4.3", registry = "crates-io" }
fips204 = { workspace = true }
fips205 = { workspace = true }
fn-dsa = { workspace = true }
fn-dsa-sign = "0.3"
fn-dsa-vrfy = "0.3"
reqwest = { workspace = true, features = ["blocking"] }
num_cpus = "1.16.0"
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"
wycheproof = "0.6"
criterion = { workspace = true }
# Compile-time assertions used by `tests/tests/version_compatibility.rs`.
# Type-export and trait-impl checks belong in `static_assertions!`, not
# `#[test]` — runtime tests with no assertions silently pass when the
# underlying constraint regresses.
static_assertions = "1.1"
# Allocation-budget test harness. Exposes `Region::new` for per-call byte deltas.
# Used by tests/tests/allocation_budgets.rs to enforce per-API alloc ceilings.
stats_alloc = "0.1"
# Independent ML-DSA / SLH-DSA implementations for cross-validation against our
# fips204 / fips205. PQClean C reference bindings. Used by
# tests/tests/cross_impl_ml_dsa.rs and cross_impl_slh_dsa.rs. Dev-only — no
# effect on published crate deps.
pqcrypto-mldsa = "0.1"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"
# DudeCT statistical constant-time harness. Powers the
# `examples/dudect_ct.rs` binary. Pulls its own rand 0.10 transitively
# (workspace is on rand 0.9 since the v0.8.0 dep upgrade); dev-only, no
# effect on published deps. The version skew is intentional and isolated
# to the dudect example binary.
dudect-bencher = "0.7"

# Linux-only dev-deps. `crabgrind 0.2` ships a build.rs that compiles a
# small C stub referencing `<valgrind/valgrind.h>`, which does not exist
# on Windows/macOS. The ctgrind harness only runs on the Linux-only
# `ctgrind.yml` workflow anyway, so gating the dep on `cfg(target_os =
# "linux")` is the right scope. `tests/examples/ctgrind_ct.rs` has a
# matching `#[cfg(target_os = "linux")]` guard on its harness module.
[target.'cfg(target_os = "linux")'.dev-dependencies]
crabgrind = "0.2"

[lib]
path = "src/lib.rs"

[[bench]]
name = "constant_time"
harness = false
